Fixes for dark mode, shadows, outlines etc.

--- a/src/components/editor/components/toolbar/content.css
+++ b/src/components/editor/components/toolbar/content.css
@@ -45,11 +45,12 @@
   padding: 0 3px;
   border-radius: calc(var(--radius) * 0.8);
   background-color: hsl(var(--popover));
-  box-shadow: 0px 3px 10px -6px hsl(var(--primary));
+  box-shadow: 0px 3px 10px -6px hsl(var(--foreground));
 }
 
 .dark .textbit-content-menu>div {
   box-shadow: none;
+  border: 1px solid hsl(var(--border))
 }
 
 .textbit-content-menu.open>div {
